--- a/WpfRestaurant/packages.config
+++ b/WpfRestaurant/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net452" />
+  <package id="Fody" version="1.29.2" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Data.Sqlite" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.EntityFrameworkCore" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.0" targetFramework="net452" />
@@ -17,6 +18,7 @@
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.2-beta2" targetFramework="net452" />
+  <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="net452" developmentDependency="true" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net452" />
   <package id="SQLite" version="3.13.0" targetFramework="net452" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
