--- a/WpfRestaurant/packages.config
+++ b/WpfRestaurant/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Apache.NMS" version="1.7.1" targetFramework="net452" />
+  <package id="Apache.NMS.ActiveMQ" version="1.7.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
-  <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net452" />
   <package id="Fody" version="1.29.2" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Data.Sqlite" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.EntityFrameworkCore" version="1.1.0" targetFramework="net452" />
