--- a/WpfRestaurant/WpfRestaurant.csproj
+++ b/WpfRestaurant/WpfRestaurant.csproj
@@ -227,7 +227,6 @@
     </Compile>
     <Compile Include="MyApp.cs" />
     <Compile Include="MyConverter.cs" />
-    <Compile Include="MyTable.cs" />
     <Compile Include="Order.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -396,6 +395,18 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <Resource Include="pic\red_button.png" />
+    <Resource Include="pic\diancai.png" />
+    <Resource Include="pic\jian.png" />
+    <Resource Include="pic\jia.png" />
+    <Resource Include="pic\cai2.png" />
+    <Resource Include="pic\cai.png" />
+    <Resource Include="pic\blue_button.png" />
+    <Resource Include="pic\menu_bg.png" />
+    <Resource Include="pic\caidan_close.png" />
+    <Resource Include="pic\caidan.png" />
+    <Resource Include="pic\refresh.png" />
+    <Resource Include="pic\dating.png" />
     <Resource Include="pic\blue_button.gif" />
     <Resource Include="pic\green_button.gif" />
     <Resource Include="pic\yellow_button.gif" />
@@ -403,12 +414,10 @@
     <Resource Include="pic\main_bgc.gif" />
     <Resource Include="pic\table_num.gif" />
     <Resource Include="pic\quanbu.gif" />
-    <Resource Include="pic\dating.gif" />
     <Resource Include="pic\baojian.gif" />
     <Resource Include="pic\time.gif" />
     <Resource Include="pic\close.gif" />
     <Resource Include="pic\unlogin.gif" />
-    <Resource Include="pic\refresh.gif" />
     <Resource Include="pic\head.gif" />
     <Resource Include="pic\title.gif" />
   </ItemGroup>
