--- a/WpfRestaurant/App.config
+++ b/WpfRestaurant/App.config
@@ -20,7 +20,8 @@
   </entityFramework>
   <connectionStrings>
     
-  <add name="restaurantEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=restaurant.db&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="restaurantEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=restaurant.db&quot;" providerName="System.Data.EntityClient" />
+  <!--<add name="restaurantEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=F:\code\WpfRestaurant\WpfRestaurant\restaurant.db&quot;" providerName="System.Data.EntityClient" />--></connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
